--- a/style.css
+++ b/style.css
@@ -1,7 +1,35 @@
+
 h1 {
     text-align: center;
+    font-family: 'Open Sans', sans-serif;
+    
 }
 
 p{
     text-align: center;
+    font-family: 'Open Sans', sans-serif;
+    
 }
+
+.gamelist {
+    font-size: 30px;
+}
+
+.row {
+    display: flex;
+  }
+  
+  .column {
+    flex: 50%;
+  }
+
+  a {
+    text-align: center;
+    font-family: 'Open Sans', sans-serif;
+  }
+
+  h3 {
+    font-family: 'Open Sans', sans-serif;
+  }
+
+  
