--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 
+
 h1 {
     text-align: center;
     font-family: 'Open Sans', sans-serif;
@@ -13,6 +14,8 @@ p{
 
 .gamelist {
     font-size: 30px;
+    font-family: 'Open Sans', sans-serif;
+    text-align: center;
 }
 
 .row {
@@ -23,13 +26,15 @@ p{
     flex: 50%;
   }
 
-  a {
-    text-align: center;
-    font-family: 'Open Sans', sans-serif;
-  }
 
   h3 {
     font-family: 'Open Sans', sans-serif;
+  }
+
+  .info {
+    text-align: center;
+    font-family: 'Open Sans', sans-serif;
+    font-size: 30px;
   }
 
   
