--- a/style.css
+++ b/style.css
@@ -38,4 +38,8 @@ h3 {
     font-size: 30px;
   }
 
+  .changelog {
+    text-align: center;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  }
   
