--- a/style.css
+++ b/style.css
@@ -42,4 +42,8 @@ h3 {
     text-align: center;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   }
-  
+
+  .haha {
+    font-size: 10px;
+    margin-top: -15px;
+  }
