--- a/style.css
+++ b/style.css
@@ -1,22 +1,40 @@
 
+body {
+  background-color: rgb(75, 72, 72);
+}
 
 h1 {
     text-align: center;
     font-family: 'Open Sans', sans-serif;
-    
+    color: white;
 }
 
 p{
     text-align: center;
     font-family: 'Open Sans', sans-serif;
+    color: white;
     
 }
 
-.gamelist {
+img {
+  align-self: center;
+  border-radius: 20px;
+}
+
+a {
+  color: white;
+}
+
+.list {
     font-size: 30px;
     font-family: 'Open Sans', sans-serif;
+    display: flex;
+    flex-direction: column;
     text-align: center;
+    justify-content: space-between;
+    border-radius: 100px;
 }
+
 
 .row {
     display: flex;
@@ -42,8 +60,13 @@ h3 {
     text-align: center;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   }
-
+  
   .haha {
     font-size: 10px;
     margin-top: -15px;
   }
+
+.thumbnail {
+  display: grid;
+  justify-content: space-evenly;
+}
