revamped the site a bit

--- a/style.css
+++ b/style.css
@@ -9,6 +9,12 @@ h1 {
     color: white;
 }
 
+h4 {
+  text-align: center;
+  font-family: 'Open Sans', sans-serif;
+  color: white;
+}
+
 p{
     text-align: center;
     font-family: 'Open Sans', sans-serif;
@@ -24,6 +30,7 @@ img {
 
 a {
   color: white;
+  text-align: center;
 }
 
 .list {
